chore: Change HPA values and normalize pageSize
